tests/baselines/reference/typeofSimple.errors.txt
typeofSimple.ts(3,5): error TS2322: Type 'number' is not assignable to type 'string'.
typeofSimple.ts(3,18): error TS2454: Variable 'v2' is used before being assigned.
typeofSimple.ts(8,21): error TS2693: 'J' only refers to a type, but is being used as a value here.
typeofSimple.ts(12,11): error TS2454: Variable 'fun' is used before being assigned.


==== typeofSimple.ts (4 errors) ====
    var v = 3;
    var v2: typeof v;
    var v3: string = v2; // Not assignment compatible
        ~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
                     ~~
!!! error TS2454: Variable 'v2' is used before being assigned.
    
    interface I<T> { x: T; }
    interface J { }
    
    var numberJ: typeof J; //Error, cannot reference type in typeof
                        ~
!!! error TS2693: 'J' only refers to a type, but is being used as a value here.
    var numberI: I<typeof v2>;
    
    var fun: () => I<number>;
    numberI = fun();
              ~~~
!!! error TS2454: Variable 'fun' is used before being assigned.